# code

./: ARCHITECTURE.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  ErrorBoundary.tsx  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen-icons.cjs
src-tauri/src/: lib.rs  lsp.rs  main.rs  terminal.rs
src/ai/: AiPanel.tsx  agent.ts
src/editor/: Breadcrumbs.tsx  MonacoWrapper.tsx
src/explorer/: FileExplorer.tsx
src/git/: GitPanel.tsx
src/github/: GitHubPanel.tsx
src/lib/: ai.ts  fs.ts  git.ts  github.ts  lsp.ts  search.ts  session.ts  settings.ts  terminal.ts
src/lsp-setup/: LspSetupPanel.tsx
src/outline/: OutlinePanel.tsx
src/palette/: CommandPalette.tsx
src/search/: SearchPanel.tsx
src/settings/: SettingsPanel.tsx
src/statusbar/: StatusBar.tsx
src/terminal/: TerminalPanel.tsx
